baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__02_parser__syntax_errors.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Broken"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR " int"
        WORD "int"
    FUNCTION_DEF
      KW_FUNCTION "function"
      INTEGER_LITERAL "123"
      WORD "Invalid"
      PARAMETER_LIST "()"
        L_PAREN "("
        R_PAREN ")"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR " {}"
          L_BRACE "{"
          R_BRACE "}"

=== ERRORS ===
Error: Expected function name, found IntegerLiteral
   ╭─[ 0:6:10 ]
   │
 6 │ function 123Invalid() {}
   │          ─┬─  
   │           ╰─── Expected function name, found IntegerLiteral
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected return type (->), found LBrace
   ╭─[ 0:6:23 ]
   │
 6 │ function 123Invalid() {}
   │                       ┬  
   │                       ╰── Expected return type (->), found LBrace
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected RBrace, found EOF
   ╭─[ 0:6:24 ]
   │
 6 │ function 123Invalid() {}
   │                        ┬  
   │                        ╰── Expected RBrace, found EOF
   │ 
   │ Note: Error code: E0010
───╯
